<resources>
    <string name="app_name">PinClassrooom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_aulas">Aulas</string>
    <string name="menu_docentes">Docentes</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_config">Configuraciones</string>
    <string name="menu_logout">Cerrar sesión</string>
</resources>
