<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_aulas"
            android:icon="@drawable/ic_domain_black_48dp"
            android:title="@string/menu_aulas" />
        <item
            android:id="@+id/nav_docentes"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/menu_docentes" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_date_range_black_48dp"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
