<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.pinclassrooom.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_aulas"
        android:name="com.example.pinclassrooom.ui.aulas.AulasFragment"
        android:label="@string/menu_aulas"
        tools:layout="@layout/fragment_aulas" />

    <fragment
        android:id="@+id/nav_docentes"
        android:name="com.example.pinclassrooom.ui.docentes.DocentesFragment"
        android:label="@string/menu_docentes"
        tools:layout="@layout/fragment_docentes" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="com.example.pinclassrooom.ui.eventos.EventosFragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.pinclassrooom.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.pinclassrooom.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>